data/issues_nolabel/nolabel_test_13706.txt
/tensorflow/core/lib/io/record_reader.h:83:19: error: use of undeclared identifier  'InputStreamInterface'   std::unique_ptr<InputStreamInterface> input_stream_;

When try to build iOS dependencies got this error. I simply run:
./tensorflow/contrib/makefile/build_all_ios_ssd.sh

And here is my env:

macOS 10.13
XCode 9

Any help would be every appreciated!
More detail errors:
In file included from tensorflow/core/lib/db/sqlite.cc:17:
./tensorflow/core/lib/io/record_reader.h:83:19: error: use of undeclared identifier
      'InputStreamInterface'
  std::unique_ptr<InputStreamInterface> input_stream_;
                  ^
1 error generated.
make: *** [/Volumes/xs/CodeSpace/ng/ai/frameworks/tensorflow/tensorflow/contrib/makefile/gen/obj/ios_ARM64/tensorflow/core/lib/db/sqlite.o] Error 1
make: *** Waiting for unfinished jobs....
+ '[' 2 -ne 0 ']'
+ echo 'arm64 compilation failed.'
arm64 compilation failed.
+ exit 1